# SCTR_EstacionMeteorologica

./: CMakeList.txt  CMakeLists.txt  LICENSE  README.md  main.c
DHT20/: CMakeList.txt  DHT20.c
sgp30/: CMakeList.txt
ssd1306/: CMakeList.txt  CMakeLists.txt  font.h  ssd1306.c  ssd1306.h
